# BZCompressor-Qt

./: CMakeLists.txt  README.md
bzcompressor/: CMakeLists.txt  bzcompressor.cpp  bzcompressor.h
compressor/: CMakeLists.txt  main.cpp
